- Fixes a bug in the dataset chooser where the taxon would not be reliably set. This is a rather weird bug, and there is still a strange js error (this.getRow(row) is not a function) but seems to be harmless. - Improve usability of the dataset search toolbar by changing the icon and adding some extra space before the 'grab' button.

--- a/gemma-web/src/main/webapp/styles/antisense/typo.css
+++ b/gemma-web/src/main/webapp/styles/antisense/typo.css
@@ -285,7 +285,7 @@ h2.helpstep,h3.helpstep {
 }
 
 .x-form-field-wrap  .x-go-trigger {
-	background-image: url(../../images/icons/go-trigger.gif);
+	background-image: url(../../images/icons/search-trigger.gif);
 	cursor: pointer;
 }
 
